Bug 40583 - timedated: Doesn't handle GetAll call on org.freedesktop.DBus.Properties
Summary: timedated: Doesn't handle GetAll call on org.freedesktop.DBus.Properties
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Lennart Poettering
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-02 09:02 UTC by Tomas Bzatek
Modified: 2011-09-04 06:04 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Tomas Bzatek 2011-09-02 09:02:32 UTC
Please make timedated to handle the GetAll call on the org.freedesktop.DBus.Properties interface - so that GDBus proxies can read and cache properties.


> $ gdbus call --system --dest org.freedesktop.timedate1 --object-path /org/freedesktop/timedate1 -m org.freedesktop.DBus.Properties.GetAll org.freedesktop.timedate1
> Error: GDBus.Error:org.freedesktop.DBus.Error.UnknownInterface: Unknown interface
> (According to introspection data, you need to pass `s')

This works with org.freedesktop.systemd1.Manager:

> $ gdbus call --system --dest org.freedesktop.systemd1 --object-path /org/freedesktop/systemd1 -m org.freedesktop.DBus.Properties.GetAll org.freedesktop.systemd1.Manager
> ({'Version': <'systemd 35'>, 'Distribution': <'fedora'>, 
... <snip> ...
> , 'SysVRcndPath': <['/etc/rc.d']>},)
Comment 1 Lennart Poettering 2011-09-04 06:04:05 UTC
Ah, a copy/paste error:

http://cgit.freedesktop.org/systemd/commit/?id=3417e2c36779b6eccdaf4e43c56bf48e2db549fc

Fixed now, thanks! Upload to f16 follows soon.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.