timedate: fix interfaces list

https://bugs.freedesktop.org/show_bug.cgi?id=40583